--- a/Bilibili.Manga.Avalonia/Windows/LoginWindow.axaml
+++ b/Bilibili.Manga.Avalonia/Windows/LoginWindow.axaml
@@ -26,19 +26,19 @@
     <Grid Grid.Row="1" Name="PwdLogin">
       <Grid.RowDefinitions>
         <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
+        <RowDefinition Height="16" />
         <RowDefinition Height="auto" />
         <RowDefinition Height="auto" />
       </Grid.RowDefinitions>
-      <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+      <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
         <Label>账号名：</Label>
         <TextBox Width="280" Text="{Binding Account}" />
       </StackPanel>
-      <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+      <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
         <Label>密码：</Label>
-        <TextBox PasswordChar="*" Width="280" Text="{Binding Passwd}" Name="pwdBox" />
+        <TextBox Margin="12,0,0,0" PasswordChar="*" Width="280" Text="{Binding Passwd}" Name="pwdBox" />
       </StackPanel>
-      <TextBlock Foreground="Red" Grid.Row="2" Text="{Binding Message}" />
+      <TextBlock Foreground="Red" Grid.Row="3" Text="{Binding Message}" />
     </Grid>
     <Grid Grid.Row="1" Name="QrLogin">
       <Image Source="{Binding QrSource}" />
