--- a/Bilibili.Manga.Avalonia/Windows/BuyPayWindow.axaml
+++ b/Bilibili.Manga.Avalonia/Windows/BuyPayWindow.axaml
@@ -1,11 +1,19 @@
 <WindowBase xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Bilibili.Manga.Avalonia.Windows.BuyPayWindow"
-        Title="购买章节">
-  <StackPanel Name="panel" Orientation="Vertical" HorizontalAlignment="Center">
-    <TextBlock Name="title" />
-  </StackPanel>
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" 
+			x:Class="Bilibili.Manga.Avalonia.Windows.BuyPayWindow" Title="购买章节">
+	<Panel>
+		<DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+			<ExperimentalAcrylicBorder>
+				<ExperimentalAcrylicBorder.Material>
+					<ExperimentalAcrylicMaterial TintColor="#333" MaterialOpacity="0.8" TintOpacity="0.8" />
+				</ExperimentalAcrylicBorder.Material>
+			</ExperimentalAcrylicBorder>
+		</DockPanel>
+	  <StackPanel Name="panel" Orientation="Vertical" HorizontalAlignment="Center">
+		<TextBlock Name="title" />
+	  </StackPanel>
+	</Panel>
 </WindowBase>
