--- a/Bilibili.Manga.Avalonia/Views/RecommandView.axaml
+++ b/Bilibili.Manga.Avalonia/Views/RecommandView.axaml
@@ -1,21 +1,19 @@
 <UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Bilibili.Manga.Avalonia.Views.RecommandView">
-	<CellListView Name="listBox" ColumnNum="4" Grid.Row="1">
-		<CellListView.ItemTemplate>
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" 
+			 x:Class="Bilibili.Manga.Avalonia.Views.RecommandView">
+	<GridView Name="listBox" Background="Transparent" ColumnNum="4" Grid.Row="1">
+		<GridView.ItemTemplate>
 			<DataTemplate>
-        <CellListViewCell>
-					<StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-						<ImageRemote Width="198" Address="{Binding Vertical_Cover}" HorizontalAlignment="Center" />
-						<TextBlock Text="{Binding Title}" HorizontalAlignment="Center" Margin="0,8,0,0" />
-            <TextBlock Text="{Binding Sub_Title}" HorizontalAlignment="Center" Margin="0,8,0,0" />
-            <TextBlock Text="{Binding Styles[0].Name}" HorizontalAlignment="Center" Margin="0,8,0,0" />
-					</StackPanel>
-        </CellListViewCell>
+				<StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+					<ImageBox Width="198" Source="{Binding Vertical_Cover}" HorizontalAlignment="Center" />
+					<TextBlock Text="{Binding Title}" HorizontalAlignment="Center" Margin="0,8,0,0" />
+					<TextBlock Text="{Binding Sub_Title}" HorizontalAlignment="Center" Margin="0,8,0,0" />
+					<TextBlock Text="{Binding Styles[0].Name}" HorizontalAlignment="Center" Margin="0,8,0,0" />
+				</StackPanel>
 			</DataTemplate>
-		</CellListView.ItemTemplate>
-	</CellListView>
+		</GridView.ItemTemplate>
+	</GridView>
 </UserControl>
