--- a/Bilibili.Manga.Avalonia/Views/SearchView.axaml
+++ b/Bilibili.Manga.Avalonia/Views/SearchView.axaml
@@ -1,9 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Bilibili.Manga.Avalonia.Views.SearchView">
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" 
+			 x:Class="Bilibili.Manga.Avalonia.Views.SearchView">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="auto" />
@@ -17,17 +17,15 @@
 			<TextBox Name="txtKeywords" Grid.Column="0" Margin="12" />
 			<Button Name="btnSearch" Grid.Column="1" Margin="12">查询</Button>
 		</Grid>
-		<CellListView Name="listBox" ColumnNum="2" Grid.Row="1">
-			<CellListView.ItemTemplate>
+		<GridView Name="listBox" Background="Transparent" ColumnNum="2" Grid.Row="1">
+			<GridView.ItemTemplate>
 				<DataTemplate>
-          <CellListViewCell>
-						<StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-							<ImageRemote Width="198" Address="{Binding Vertical_Cover}" HorizontalAlignment="Center" />
-              <TextBlock Margin="0,8,0,0" Text="{Binding Title}" HorizontalAlignment="Center" />
-						</StackPanel>
-          </CellListViewCell>
+					<StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+						<ImageBox Width="198" Source="{Binding Vertical_Cover}" HorizontalAlignment="Center" />
+						<TextBlock Margin="0,8,0,0" Text="{Binding Title}" HorizontalAlignment="Center" />
+					</StackPanel>
 				</DataTemplate>
-			</CellListView.ItemTemplate>
-		</CellListView>
+			</GridView.ItemTemplate>
+		</GridView>
 	</Grid>
 </UserControl>
