--- a/Bilibili.Manga.Avalonia/Windows/MangaWindow.axaml
+++ b/Bilibili.Manga.Avalonia/Windows/MangaWindow.axaml
@@ -1,36 +1,42 @@
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Bilibili.Manga.Avalonia.Windows.MangaWindow"
-        Title="漫画详细">
-  <TabControl Name="homeTab">
-    <TabItem Header="详细" VerticalContentAlignment="Center">
-      <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="16">
-        <ImageRemote Address="{Binding Info.Horizontal_Cover}" Width="480" />
-        <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Info.Title}" />
-        <TextBlock Text="{Binding Info.Authors}" />
-        <TextBlock Text="{Binding Info.Tags}"/>
-        <TextBlock Text="{Binding Info.Newest}" />
-        <TextBlock Text="{Binding Info.Renewal_Time}" />
-        <TextBlock Text="{Binding Info.Classic_Lines}" />
-        <Button Name="btnFollow" Content="{Binding Follow}" />
-      </StackPanel>
-    </TabItem>
-    <TabItem Header="列表" VerticalContentAlignment="Center">
-      <CellListView Items="{Binding EpList}" Name="listBox" ColumnNum="4" Grid.Row="1">
-        <CellListView.ItemTemplate>
-          <DataTemplate>
-            <CellListViewCell>
-              <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-                <TextBlock Text="{Binding Short_Title}" HorizontalAlignment="Center" />
-                <TextBlock Text="{Binding Title}" HorizontalAlignment="Center" />
-              </StackPanel>
-            </CellListViewCell>
-          </DataTemplate>
-        </CellListView.ItemTemplate>
-      </CellListView>
-    </TabItem>
-  </TabControl>
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" 
+		x:Class="Bilibili.Manga.Avalonia.Windows.MangaWindow" Title="漫画详细">
+	<Panel>
+		<DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+			<ExperimentalAcrylicBorder>
+				<ExperimentalAcrylicBorder.Material>
+					<ExperimentalAcrylicMaterial TintColor="#333" MaterialOpacity="0.8" TintOpacity="0.8" />
+				</ExperimentalAcrylicBorder.Material>
+			</ExperimentalAcrylicBorder>
+		</DockPanel>
+		<TabControl Name="homeTab">
+			<TabItem Header="详细" VerticalContentAlignment="Center">
+				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="16">
+					<ImageBox Source="{Binding Info.Horizontal_Cover}" Width="480" />
+					<TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Info.Title}" />
+					<TextBlock Text="{Binding Info.Authors}" />
+					<TextBlock Text="{Binding Info.Tags}"/>
+					<TextBlock Text="{Binding Info.Newest}" />
+					<TextBlock Text="{Binding Info.Renewal_Time}" />
+					<TextBlock Text="{Binding Info.Classic_Lines}" />
+					<Button Name="btnFollow" Content="{Binding Follow}" />
+				</StackPanel>
+			</TabItem>
+			<TabItem Header="列表" VerticalContentAlignment="Center">
+				<GridView Items="{Binding EpList}" Name="listBox" ColumnNum="4" Grid.Row="1" Background="Transparent">
+					<GridView.ItemTemplate>
+						<DataTemplate>
+							<StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+								<TextBlock Text="{Binding Short_Title}" HorizontalAlignment="Center" />
+								<TextBlock Text="{Binding Title}" HorizontalAlignment="Center" />
+							</StackPanel>
+						</DataTemplate>
+					</GridView.ItemTemplate>
+				</GridView>
+			</TabItem>
+		</TabControl>
+	</Panel>
 </Window>
