--- a/Bilibili.Manga.Avalonia/Views/SearchView.axaml
+++ b/Bilibili.Manga.Avalonia/Views/SearchView.axaml
@@ -14,7 +14,7 @@
 				<ColumnDefinition Width="*" />
 				<ColumnDefinition Width="auto" />
 			</Grid.ColumnDefinitions>
-			<TextBox Name="txtKeywords" Grid.Column="0" Margin="12" />
+			<EditTextView Name="txtKeywords" Grid.Column="0" Margin="12" />
 			<Button Name="btnSearch" Grid.Column="1" Margin="12">查询</Button>
 		</Grid>
 		<GridView Name="listBox" Background="Transparent" ColumnNum="2" Grid.Row="1">
