--- a/Bilibili.Manga.Avalonia/App.axaml
+++ b/Bilibili.Manga.Avalonia/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:ext="using:Bilibili.Manga.Avalonia.Converter"
-			 x:Class="Bilibili.Manga.Avalonia.App">
+  xmlns:ext="using:Bilibili.Manga.Converter"
+			 x:Class="Bilibili.Manga.App">
   <Application.Styles>
     <FluentTheme Mode="Dark"/>
     <Styles>
