--- a/Bilibili.Manga.Avalonia/MainWindow.axaml
+++ b/Bilibili.Manga.Avalonia/MainWindow.axaml
@@ -3,8 +3,8 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			x:Class="Bilibili.Manga.Avalonia.MainWindow"
-	xmlns:views="using:Bilibili.Manga.Avalonia.Views" Title="Bilibili漫画">
+			x:Class="Bilibili.Manga.MainWindow"
+	xmlns:views="using:Bilibili.Manga.Views" Title="Bilibili漫画">
 	<Panel>
 		<DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
 			<ExperimentalAcrylicBorder>
