--- a/Bilibili.Manga.Avalonia/Views/PartsView.axaml
+++ b/Bilibili.Manga.Avalonia/Views/PartsView.axaml
@@ -3,7 +3,7 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			 x:Class="Bilibili.Manga.Avalonia.Views.PartsView">
+			 x:Class="Bilibili.Manga.Views.PartsView">
 	<Grid Margin="8">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="auto" />
