--- a/Bilibili.Manga.Avalonia/Views/RankView.axaml
+++ b/Bilibili.Manga.Avalonia/Views/RankView.axaml
@@ -1,7 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="Bilibili.Manga.Avalonia.Views.RankView">
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" 
+  x:Class="Bilibili.Manga.Views.RankView">
   <GridView Name="listBox" Background="Transparent" ColumnNum="4" Grid.Row="1">
     <GridView.ItemTemplate>
       <DataTemplate>
