--- a/Bilibili.Manga.Avalonia/Windows/MangaWindow.axaml
+++ b/Bilibili.Manga.Avalonia/Windows/MangaWindow.axaml
@@ -3,7 +3,7 @@
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" 
-		x:Class="Bilibili.Manga.Avalonia.Windows.MangaWindow" Title="漫画详细">
+		x:Class="Bilibili.Manga.Windows.MangaWindow" Title="漫画详细">
 	<Panel>
 		<DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
 			<ExperimentalAcrylicBorder>
